--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,19 @@
             <version>3.14</version>
         </dependency>
 
+<!--SpringBoot结合commons-fileupload上传文件-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
     </dependencies>
 
 
